--- a/app/globals.css
+++ b/app/globals.css
@@ -34,6 +34,7 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+
 }
 
 @layer base {
@@ -64,6 +65,7 @@ body {
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
+
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
@@ -96,6 +98,7 @@ body {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
@@ -135,7 +138,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.3),
-              0 0 8px rgba(255, 255, 255, 0.1);
+    0 0 8px rgba(255, 255, 255, 0.1);
 }
 
 /* Heads style */
@@ -154,12 +157,10 @@ body {
 .shine-effect {
   width: 100%;
   height: 100%;
-  background: linear-gradient(
-    120deg,
-    rgba(255, 255, 255, 0.2) 0%,
-    rgba(255, 255, 255, 0.6) 50%,
-    rgba(255, 255, 255, 0.2) 100%
-  );
+  background: linear-gradient(120deg,
+      rgba(255, 255, 255, 0.2) 0%,
+      rgba(255, 255, 255, 0.6) 50%,
+      rgba(255, 255, 255, 0.2) 100%);
   animation: shine 1s linear infinite;
   transform: rotate(25deg);
   opacity: 0.4;
@@ -170,14 +171,22 @@ body {
     transform: translateX(200%);
     opacity: 0;
   }
+
   to {
     transform: translateX(0);
     opacity: 1;
   }
 }
+
 .animate-slide-in {
   animation: slide-in-right 0.5s ease-out forwards;
 }
 
+@keyframes reelScroll {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-100%); }
+}
 
-
+.animate-reelScroll {
+  animation: reelScroll 0.6s linear infinite;
+}
